--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-icon-link no-link-style" href="">
+                <a class="nav-icon-link no-link-style" href="./Components/Wishlist/wishlist.html">
                   <span class="nav-icon">
                     <i class="fas fa-heart"></i>
                   </span>
