--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
       crossorigin="anonymous"
     />
-    <!-- <link rel="stylesheet" href="font-awesome/css/font-awesome.css"> -->
   </head>
   <body>
     <div class="landing-page-layout">
@@ -59,7 +58,7 @@
                 <a class="nav-item-link" href="./Components/Login/login.html">LOGIN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-icon-link badge-container no-link-style" href="">
+                <a class="nav-icon-link badge-container no-link-style" href="./Components/Cart/cart.html">
                   <span class="nav-icon">
                     <i class="fas fa-shopping-bag"></i>
                   </span>
@@ -100,7 +99,8 @@
       <div class="hero-img-wrapper">
         <div class="text-overlay">
             <h1 class="text-overlay-title">LIVE WITH NATURE </h1>
-            <button class="bttn bttn-primary bttn-lg">SHOP NOW</button>
+            <button class="bttn bttn-primary bttn-lg"> <a class="shop-btn" href="./Components/Products/product.html"> SHOP NOW</a>
+           </button>
         </div>
          <a href="#">
              <picture>
