--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
               <rect y="20" width="60" height="10"></rect>
               <rect y="40" width="60" height="10"></rect>
             </svg>
-            <a class="brand-logo" href="#">ZIA</a>
+            <a class="brand-logo" href="#">FERN</a>
+           
             <ul class="navbar-nav navbar-nav-collapse">
               <li class="nav-item">
                 <a class="nav-item-link" href="">HOME</a>
@@ -132,8 +133,10 @@
       </div>
 
       <div class="homepage-feature-section">
-        <div class="asideSection">
-         
+        <header class="homepage-feature-header py-4 text-center">
+          <h4 class="homepage-feature-title">Featured Cateogry</h4>
+        </header>
+        <div class="asideSection">  
           <div class="feature-box">
             <a href="">
               <div>
