Added responsive sidebar

--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@
           <div class="sidebar-wrapper" id="sidebar-wrapper">
             <div class="sidebar" id="sidebar">
               <ul class="sidebar-list sidebar-collapse">
-                <li class="navbar-link-item hide">
-                  <a class="nav-item-link" href="#"><i>Profile icon</i></a>
+                <li class="sidebar-item hide">
+                  <a class="sidebar-item-link profile-icon" href="#"><i class="fas fa-user"></i></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-item-link" href="">HOME</a>
+                <li class="sidebar-item">
+                  <a class="sidebar-item-link" href="#">Home</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-item-link" href="">PRODUCT</a>
+                <li class="sidebar-item">
+                  <a class="sidebar-item-link" href="./Components/Products/product.html">Product</a>
                 </li>
-                <li class="nav-item hide">
-                  <a class="nav-item-link" href="#">Orders</a>
+                <li class="sidebar-item hide">
+                  <a class="sidebar-item-link" href="#">Order</a>
                 </li>
-                <li class="nav-item hide">
-                  <a class="nav-item-link" href="#">Contact Us</a>
+                <li class="sidebar-item hide">
+                  <a class="sidebar-item-link" href="#">Contact Us</a>
                 </li>
               </ul>
             </div>
@@ -173,5 +173,7 @@
         </div>
       </div>
     </div>
+
+  <script src="./Components/Navbar/navbar.js"></script>
   </body>
 </html>
