--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZIA</title>
+    <title>Fern</title>
     <link
       rel="stylesheet"
       href="https://kube-ui.netlify.app/Components/kube-ui.css"
@@ -85,6 +85,13 @@
                   <span class="nav-icon">
                     <i class="fas fa-heart"></i>
                   </span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-icon-link no-link-style"
+                  href="#">
+                LOGOUT
                 </a>
               </li>
             </ul>
